--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,10 +5,9 @@
 :root{
     --blue: rgb(60, 60, 231);
     --modal-color-primary: #f6f6f6;
-    --input-color-secondary: #f0f0f0;
+    --input-color-secondary: #f1f1f1;
 }
 
 body{
-    font-family: 'Poppins', sans-serif;
-    color: #272727;
+    font-family: "DM Sans", sans-serif;
 }
