--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,5 +9,7 @@
 }
 
 body{
-    font-family: "DM Sans", sans-serif;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: normal;
 }
