--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -6,4 +6,8 @@
     background-color: var(--blue);
     border: 2px solid var(--blue);
     color: #fff !important;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
