--- a/src/styles/components/nav.css
+++ b/src/styles/components/nav.css
@@ -1,7 +1,7 @@
 .navbar-dashboard{
     position: relative;
     background-color: white;
-    width: 200px;
+    width: 250px;
     height: 100vh;
     padding: 1rem;
     display: flex;
@@ -28,4 +28,10 @@
 
 .container-button-nav{
     width: 100%;
+}
+
+.options-navbar{
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
 }
