--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -28,9 +28,9 @@ main{
 
 
 .form-container h1{
-    font-size: 1.5rem;
-    text-align: center;
+    font-size: 1.2rem;
     font-weight: 900;
-    color: rgb(0, 0, 0);
+    color: rgb(66, 66, 66);
     margin-bottom: 1.5rem;
+    letter-spacing: 0.05rem;
 }
