--- a/src/styles/components/profile.css
+++ b/src/styles/components/profile.css
@@ -1,21 +1,26 @@
-.profiles{
+.profile{
     width: 100%;
     font-size: 0.8rem;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    background-color: rgb(246, 246, 246);
+    padding: 1rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: all ease-in-out 0.1s;
+}
+.profile:hover{
     background-color: rgb(241, 241, 241);
-    padding: 0.5rem;
-    border-radius: 0.25rem;
 }
 .name-profile h5{
     font-weight: 900;
 }
 .name-profile p{
-    color: rgb(66, 66, 66);
+    color: rgb(133, 133, 133);
 }
 .profiles > button{
     font-size: 1.2rem;
-    color: rgb(66, 66, 66);
+    color: rgb(133, 133, 133);
 }
