Termine el dashboard, se muestran los graficos dependiendo del usuario que inicio sesion, tambien coloque la opcion para cerrar sesion, tambien ya defini la variable que permitira mostrar el contenido segun el boton seleccionado

--- a/src/styles/components/icon.css
+++ b/src/styles/components/icon.css
@@ -2,10 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 50%;
-    font-size: 1rem;
-    background-color: #fff;
-    color: #646464;
+    color: #7c7c7c;
     background-position: center;
     background-size: cover;
 }
