--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -3,8 +3,16 @@
     display: flex;
     flex-direction: row;
     padding: 1rem;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
+    position: relative;
+}
+.header-aside-dashboard h1{
+    letter-spacing: 0.05rem;
+    margin-left: 0.5rem;
+    font-weight: 900;
+    font-size: 1.5rem;
+    color: rgb(51, 51, 51);
 }
 .icons-header-aside{
     display: flex;
@@ -12,4 +20,11 @@
 }
 .profile-icon{
     margin-left: 2rem;
+}
+.options-header{
+    position: absolute;
+    right: 1.5rem;
+    transform: translateY(100%);
+    z-index: 2;
+    width: fit-content;
 }
