corregi el tamaño de los graficos, por alguna extraña razon se redimensionaron al pasarlo al visual studio de mi ordenador remoto, lo corregi

--- a/src/styles/components/section.css
+++ b/src/styles/components/section.css
@@ -9,11 +9,15 @@
     top: 50%;
     transform: translateY(-50%);
 }
+.size-dought{
+    width: 600px !important;
+    height: 600px !important;
+}
 .size-bar{
     margin-left: 3rem !important;
 }
-.size{
-    margin: auto;
+.centerHorizontal{
+    margin: auto !important;
 }
 .section h3{
     margin-bottom: 0.5rem;
