--- a/src/styles/components/barstatus.css
+++ b/src/styles/components/barstatus.css
@@ -1,6 +1,6 @@
 .barStatus{
     background-color: white;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
     overflow: hidden;
 }
 .barStatus > ul{
@@ -13,12 +13,29 @@
 .barStatus > ul > li{
     font-size: 0.8rem;
     padding: 0.8rem;
+    position: relative;
 }
 .barStatus > ul > li > h2{
-    font-weight: 900;
+    font-weight: 500;
     margin-bottom: 0.2rem;
+    letter-spacing: 0.1rem;
+}
+.next-icon{
+    width: 30px; 
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: white;
+    border-radius: 50%;
+    right: -1rem;
+    font-size: 1.2rem;
+    color: #000 !important;
 }
 .painted{
-    background-color: #ededff !important;
-    border-right: 2px solid var(--blue);
+    background-color: var(--blue);
+    color: white;
 }
