--- a/src/styles/components/barstatus.css
+++ b/src/styles/components/barstatus.css
@@ -1,41 +1,24 @@
 .barStatus{
-    background-color: white;
+   width: 100%;
+   margin-top: 1rem;
+}
+.barStatus ul{
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    list-style: none;
     border-radius: 0.5rem;
     overflow: hidden;
 }
-.barStatus > ul{
-    width: 100%;
-    list-style: none;
+.barStatus ul li{
+    font-size: 0.8rem;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-}
-.barStatus > ul > li{
-    font-size: 0.8rem;
-    padding: 0.8rem;
-    position: relative;
-}
-.barStatus > ul > li > h2{
-    font-weight: 500;
-    margin-bottom: 0.2rem;
-    letter-spacing: 0.1rem;
-}
-.next-icon{
-    width: 30px; 
-    height: 30px;
-    display: flex;
-    justify-content: center;
     align-items: center;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: white;
-    border-radius: 50%;
-    right: -1rem;
-    font-size: 1.2rem;
-    color: #000 !important;
+    padding: 1rem;
+    background-color: #2020cc0c;
 }
 .painted{
-    background-color: var(--blue);
-    color: white;
+    background-color: var(--blue) !important;
+    color: white !important;
 }
