--- a/src/styles/components/precandidate.css
+++ b/src/styles/components/precandidate.css
@@ -1,3 +1,39 @@
 .section-precandidates{
     padding: 0 1rem 0 1rem;
+    display: flex;
+    flex-direction: column;
+}
+.btn-new-candidate{
+    width: fit-content;
+    align-self:flex-end;
+    margin-bottom: 1rem;
+}
+
+
+
+.container-candidates{
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.container-candidates > div{
+    width: 49%;
+    background-color: white;
+    border-radius: 0.4rem;
+    overflow: hidden;
+    padding: 1rem;
+}
+.container-candidates > div h2{
+    font-weight: 900;
+    font-size: 0.8rem;
+    margin-bottom: 0.5rem;
+    color: #585858;
+}
+
+
+.search-container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
 }
