--- a/src/styles/components/precandidate.css
+++ b/src/styles/components/precandidate.css
@@ -14,26 +14,18 @@
 .container-candidates{
     margin-top: 1rem;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-.container-candidates > div{
-    width: 49%;
+    flex-direction: column;
     background-color: white;
-    border-radius: 0.4rem;
-    overflow: hidden;
-    padding: 1rem;
+    border-radius: 0.5rem;
+    padding:1rem;
+    padding-left: 0 !important;
 }
-.container-candidates > div h2{
-    font-weight: 900;
-    font-size: 0.8rem;
-    margin-bottom: 0.5rem;
-    color: #585858;
-}
+
 
 
 .search-container{
     width: 100%;
     display: flex;
     flex-direction: row;
+    background-color: white;
 }
