aqui funciona bien, llegue hasta donde puedo mostrar formulario de preregistro de precandidato

--- a/src/styles/components/icon.css
+++ b/src/styles/components/icon.css
@@ -3,6 +3,6 @@
     justify-content: center;
     align-items: center;
     color: #7c7c7c;
-    background-position: center;
-    background-size: cover;
+    background-position: center !important;
+    background-size: cover !important;
 }
