--- a/src/styles/components/precandidate.css
+++ b/src/styles/components/precandidate.css
@@ -29,3 +29,99 @@
     flex-direction: row;
     background-color: white;
 }
+
+
+
+
+
+/*Es el cuadro padre que contiene el formulario de registro de precandidato en el centro*/
+.container-signup-precandidate{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 5;
+}
+.form-precandidate{/*Es el hijo que contiene el componente form*/
+    padding: 2rem;
+    border-radius: 1rem;
+    position: relative;
+    height: 80%;
+    width: 40%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Estilos para el contenedor de la tabla */
+
+  
+  /* Estilos para el scroll vertical */
+  .form-precandidate::-webkit-scrollbar {
+    width: 5px; /* Ancho del scroll */
+  }
+  
+  .form-precandidate::-webkit-scrollbar-track {
+    background: #ffffff; /* Color de fondo del track */
+  }
+  
+  .form-precandidate::-webkit-scrollbar-thumb {
+    background: #d4d4d4; /* Color del thumb (barra deslizante) */
+    opacity: 0;
+    border-radius: 3px; /* Borde redondeado del thumb */
+  }
+  
+  /* Pseudoelemento antes del thumb */
+  .form-precandidate::-webkit-scrollbar-thumb:hover::before {
+    opacity: 1; /* Hace visible el pseudoelemento */
+  }
+  
+  .form-precandidate::-webkit-scrollbar-thumb::before {
+    content: ''; /* Contenido del pseudoelemento */
+    position: absolute; /* Establece la posición absoluta */
+    width: 8px; /* Ancho igual al del thumb */
+    height: 20px; /* Altura del pseudoelemento */
+    top: 1; /* Lo coloca arriba del thumb */
+    left: 0; /* Lo coloca a la izquierda del thumb */
+    background: rgba(0, 0, 0, 0.5); /* Color del pseudoelemento */
+    border-radius: 4px; /* Borde redondeado */
+    transition: opacity 0.3s; /* Efecto de transición */
+    opacity: 0; /* Inicialmente invisible */
+  }
+  
+  /* Pseudoelemento después del thumb */
+  .form-precandidate::-webkit-scrollbar-thumb::after {
+    content: ''; /* Contenido del pseudoelemento */
+    position: absolute; /* Establece la posición absoluta */
+    width: 8px; /* Ancho igual al del thumb */
+    height: 20px; /* Altura del pseudoelemento */
+    bottom: 0; /* Lo coloca abajo del thumb */
+    left: 0; /* Lo coloca a la izquierda del thumb */
+    background: rgba(0, 0, 0, 0.5); /* Color del pseudoelemento */
+    border-radius: 4px; /* Borde redondeado */
+    transition: opacity 0.3s; /* Efecto de transición */
+    opacity: 0 !important; /* Inicialmente invisible */
+  }
+  
+  /* Al hacer hover sobre el scroll */
+  .form-precandidate:hover::-webkit-scrollbar-thumb::before,
+  .form-precandidate:hover::-webkit-scrollbar-thumb::after {
+    opacity: 1; /* Hace visible los pseudoelementos */
+  }
