--- a/src/styles/components/search.css
+++ b/src/styles/components/search.css
@@ -2,6 +2,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    align-items: center;
     font-size: 0.8rem;
 }
 .search-input input{
