--- a/src/styles/components/table.css
+++ b/src/styles/components/table.css
@@ -4,14 +4,15 @@
     position: relative;
     height: 360px;
     overflow-y: auto;
+    overflow-x: auto;
 }
 table{
     width: 100%;
-    font-size: 0.6rem;
+    font-size: 0.8rem;
 }
-
 table thead th{
-    padding: 1.5rem 0;
+    width: fit-content;
+    padding: 0.7rem 0;
     font-weight: 100;
     letter-spacing: 0.02rem;
     position: sticky;
@@ -29,8 +30,9 @@ table thead th:first-child{
     border-bottom-left-radius: 0.5rem;
 }
 table tbody tr td{
+    padding: 1.5rem;
+    border-right: 1px solid #f3f3f3;
     text-align: center;
-    padding: 1.5rem 0;
 }
 table tbody tr td:first-child{
   border-top-left-radius: 0.5rem;
@@ -39,6 +41,7 @@ table tbody tr td:first-child{
 table tbody tr td:last-child{
   border-top-right-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
+  border-right: none !important;
 }
 table tbody tr{
   border-bottom: 1px solid #eeeeee;
