--- a/src/styles/components/actionbar.css
+++ b/src/styles/components/actionbar.css
@@ -1,19 +1,21 @@
 .actions-bar{
     margin: auto;
+    background-color: #000;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
 }
 .actions-bar button{
     margin-right: 1rem;
     padding: 0.3rem;
     border-radius: 0.2rem;
     transition: all ease-in-out 0.3s;
-    background-color: #f0f0f0;
 }
 .actions-bar button:last-child{
     margin-right: 0rem;
 }
 .delete-pre{/*Esta clase viene como atributo del objeto del arreglo de options Precandidate.jsx*/
-    color: #dd0000;
+    color: #ffffff !important;
 }
 .done-pre{
-    color: rgb(111, 146, 126);
+    color: rgb(255, 255, 255);
 }
