--- a/src/styles/components/table.css
+++ b/src/styles/components/table.css
@@ -18,34 +18,20 @@ table thead th{
     position: sticky;
     top: 0;
     z-index: 1;
-    background-color: #f5f5ff;
-    color: #252525;
+    background-color: #f0f0fa;
+    color: #0e0e0e;
 }
 table thead th:last-child{
     border-top-right-radius: 0.5rem;
-    border-bottom-right-radius: 0.5rem;
 }
 table thead th:first-child{
     border-top-left-radius: 0.5rem;
-    border-bottom-left-radius: 0.5rem;
 }
 table tbody tr td{
-    padding: 1.5rem;
-    border-right: 1px solid #f3f3f3;
+    padding: 1rem;
     text-align: center;
 }
-table tbody tr td:first-child{
-  border-top-left-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-}
-table tbody tr td:last-child{
-  border-top-right-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
-  border-right: none !important;
-}
-table tbody tr{
-  border-bottom: 1px solid #eeeeee;
-}
+
 
 
 
@@ -56,6 +42,9 @@ table tbody tr{
   color: var(--blue);
   outline: none;
   padding: 1rem;
+}
+.rowSelected{
+  background-color: #f2eff7;
 }
 
 
@@ -69,6 +58,7 @@ table tbody tr{
   /* Estilos para el scroll vertical */
   .table-container::-webkit-scrollbar {
     width: 5px; /* Ancho del scroll */
+    height: 5px;
   }
   
   .table-container::-webkit-scrollbar-track {
