--- a/src/styles/components/precandidate.css
+++ b/src/styles/components/precandidate.css
@@ -4,15 +4,15 @@
     flex-direction: column;
 }
 .btn-new-candidate{
-    width: fit-content;
-    align-self:flex-end;
-    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 2rem;
 }
 
 
 
 .container-candidates{
-    margin-top: 1rem;
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -24,10 +24,9 @@
 
 
 .search-container{
-    width: 100%;
+    width: 80%;
     display: flex;
     flex-direction: row;
-    background-color: white;
 }
 
 
@@ -62,7 +61,16 @@
 
 
 
-
+/*Estilos para el spinner que se muestra al cargar la tabla*/
+.spinner-table-precandidates{/*Es el contenedor que contienen dentro el spinner*/
+  width: 100%;
+  height: 400px;
+  display: flex;
+  z-index: 8;
+  justify-content: center;
+  align-items: center;
+  color: #838383;
+}
 
 
 
