--- a/src/styles/components/table.css
+++ b/src/styles/components/table.css
@@ -2,13 +2,13 @@
     margin-top: 2rem;
     width: 100%;
     position: relative;
-    height: 360px;
+    height: 400px;
     overflow-y: auto;
     overflow-x: auto;
 }
 table{
     width: 100%;
-    font-size: 0.8rem;
+    font-size: 0.6rem;
 }
 table thead th{
     width: fit-content;
@@ -31,7 +31,10 @@ table tbody tr td{
     padding: 1rem;
     text-align: center;
 }
-
+table tbody tr td p{
+  color: #274eff;
+  cursor: pointer;
+}
 
 
 
