--- a/src/styles/components/table.css
+++ b/src/styles/components/table.css
@@ -30,6 +30,7 @@ table thead th:first-child{
 table tbody tr td{
     padding: 1rem;
     text-align: center;
+    border-radius: 0.5rem;
 }
 table tbody tr td p{
   color: #274eff;
