--- a/src/styles/components/precandidate.css
+++ b/src/styles/components/precandidate.css
@@ -4,9 +4,10 @@
     flex-direction: column;
 }
 .btn-new-candidate{
+    width: 98.5%;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin-top: 2rem;
 }
 
@@ -29,6 +30,12 @@
     flex-direction: row;
 }
 
+
+
+.params-filter-precandidate{/*Es el contenedor que contiene los parametros de filtro de busqueda*/
+  display: flex;
+  flex-direction: row;
+}
 
 
 
