funciona pero el formulario de editar al darle click en editar me aparece el formulario con los datos de la persona pero no me deja escribir, esto puede ser porque le estableci como valor por deafult en los inputs

--- a/src/styles/components/modal-primary.css
+++ b/src/styles/components/modal-primary.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     padding: 1rem;
     border-radius: 0.6rem;
-    background-color: var(--modal-color-primary);
+    background-color: #fff;
 }
 .modal-primary h1{
     text-transform: uppercase;
