add functionality to refresh table

--- a/src/styles/components/table.css
+++ b/src/styles/components/table.css
@@ -57,6 +57,10 @@ table tbody tr td p{
 
 
 
+#btn-refresh-table{/*Estilos para el boton actualizar o refrescar la tabla*/
+  background-color: #0e0e0e;
+}
+
 
 
 
