--- a/src/styles/components/precandidate.css
+++ b/src/styles/components/precandidate.css
@@ -41,6 +41,7 @@
 .params-filter-precandidate{/*Es el contenedor que contiene los parametros de filtro de busqueda*/
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 
