--- a/src/styles/components/icon.css
+++ b/src/styles/components/icon.css
@@ -5,4 +5,5 @@
     color: #7c7c7c;
     background-position: center !important;
     background-size: cover !important;
+    position: relative;
 }
