--- a/src/styles/components/option.css
+++ b/src/styles/components/option.css
@@ -1,19 +1,38 @@
 .modal-options{
     display: flex;
+    flex-direction: column;
     background-color: white;
     border-radius: 0.5rem;
     font-size: 0.8rem;
     padding: 0.5rem;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    padding-right: 1rem;
+    overflow: hidden;
+    list-style: none;
 }
 .modal-options li{
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 0.2rem 0.5rem;
     border-radius: 0.5rem;
+    padding-right: 1rem;
     cursor: pointer;
     transition: all ease-in-out 0.3s;
+    position: relative;
+    font-size: 0.8rem;
+}
+.modal-options li p:last-child{
+    margin-left: 1rem;
+    color: #aaaaaa;
+}
+.label-notify{
+    position: absolute;
+    top: -0.1rem;
+    right: -0.6rem;
+    font-size: 0.6rem;
+    background-color: #56eb8f83;
+    padding: 0.2rem;
+    color: #003b08;
+    border-radius: 0.2rem;
 }
 .modal-options li:hover{
     background-color: #f7f7f7;
