--- a/src/styles/components/precandidate.css
+++ b/src/styles/components/precandidate.css
@@ -2,6 +2,7 @@
     padding: 0 1rem 0 1rem;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 .modal-msg-section-precandidates{/*Es el padre que almacena el modal de notificaicon de mensajes*/
   position: absolute;
@@ -16,11 +17,15 @@
   z-index: 10;
 }
 .btn-new-candidate{
-    width: 98.5%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-top: 2rem;
+    background-color: white;
+    padding: 1rem 0.5rem 0.5rem 0.5rem;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
 }
 
 
@@ -29,9 +34,11 @@
     display: flex;
     flex-direction: column;
     background-color: white;
-    border-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
     padding:1rem;
     padding-left: 0 !important;
+    position: relative;
 }
 
 
@@ -40,6 +47,8 @@
     width: 80%;
     display: flex;
     flex-direction: row;
+    background-color: white;
+    overflow: hidden;
 }
 
 
@@ -48,6 +57,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding: 0rem 0.5rem 0.5rem 0.5rem; /**Agregue ahorita 2**/
 }
 
 
@@ -112,7 +122,7 @@
   
   /* Estilos para el scroll vertical */
   .form-precandidate::-webkit-scrollbar {
-    width: 5px; /* Ancho del scroll */
+    width: 15px; /* Ancho del scroll */
   }
   
   .form-precandidate::-webkit-scrollbar-track {
