--- a/src/styles/components/search.css
+++ b/src/styles/components/search.css
@@ -1,9 +1,13 @@
 .search-input{
-    width: 100%;
+    width: 47%;
     display: flex;
     flex-direction: row;
     align-items: center;
     font-size: 0.8rem;
+    padding-left: 0.5rem !important;
+    background-color: #f7f7f7 !important;
+    border-radius: 0.5rem;
+    overflow: hidden;
 }
 .search-input input{
     width: 100% !important;
@@ -11,5 +15,6 @@
     margin-left: 0.4rem;
     padding: 0.5rem;
     outline: none;
+    background-color: #f7f7f7;
     color: #585858;
 }
