--- a/src/styles/components/table.css
+++ b/src/styles/components/table.css
@@ -1,10 +1,11 @@
 .table-container{
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     width: 100%;
     position: relative;
     height: 370px;
     overflow-y: auto;
     overflow-x: auto;
+    padding: 0rem 0.5rem 0.5rem 0.5rem;
 }
 @media screen and (min-height: 800px){
   .table-container{
@@ -13,18 +14,33 @@
 }
 table{
     width: 100%;
-    font-size: 0.8rem;
+    font-size: 0.6rem;
+    position: relative;
+    border-collapse: collapse;
+}
+table thead{
+  position: sticky;
+  top: 0rem;
+  left: 0;
+  padding-top: 1rem;
+  background-color: rgb(255, 255, 255);
+}
+thead::after {/* Con esto me aseguro que no se desplace el border bottom*/
+  content: ''; 
+  position: absolute;
+  left: 0;
+  bottom: -2px; 
+  width: 100%; 
+  height: 2px; 
+  background-color: #e7e7e7; 
+  z-index: -1; 
 }
 table thead th{
     width: fit-content;
-    padding: 0.7rem 0;
+    padding: 0.5rem 0;
     font-weight: 100;
     letter-spacing: 0.02rem;
-    position: sticky;
-    top: 0;
-    z-index: 1;
-    background-color: #f0f0fa;
-    color: #0e0e0e;
+    color: #312e2e;
 }
 table thead th:last-child{
     border-top-right-radius: 0.5rem;
@@ -35,6 +51,7 @@ table thead th:first-child{
 table tbody tr td{
     padding: 1rem;
     text-align: center;
+    border-bottom: 1px solid #f5f5f5;
 }
 table tbody tr td p{
   color: #274eff;
