--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -6,6 +6,7 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
+    z-index: 4;
 }
 .header-aside-dashboard h1{
     letter-spacing: 0.05rem;
