hice el tiempo real

--- a/src/styles/components/table.css
+++ b/src/styles/components/table.css
@@ -15,6 +15,7 @@
 table{
     width: 100%;
     font-size: 0.6rem;
+    letter-spacing: 0.03rem;
     position: relative;
     border-collapse: collapse;
 }
