--- a/src/styles/components/precandidate.css
+++ b/src/styles/components/precandidate.css
@@ -74,7 +74,19 @@
     justify-content: center;
     align-items: center;
     z-index: 13;
-    background-color: rgba(0, 0, 0, 0.418);
+    background-color: rgba(0, 0, 0, 0.295);
+}
+.container-confirmation-modal{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 13;
+    background-color: rgba(0, 0, 0, 0.295);
 }
 .form-precandidate{/*Es el hijo que contiene el componente form*/
     padding: 2rem;
