arregle para que cuando edite en la subseccion process recrutiment, no se edite todo y no cambie el campo general information

--- a/src/styles/components/table.css
+++ b/src/styles/components/table.css
@@ -12,9 +12,12 @@
 .pr{/*Tamaño de la tabla cuando esta en la subseccion process recruitment*/
   height: 415px;
 }
-@media screen and (min-height: 800px){
+@media screen and (min-height: 700px){
   .table-container{
-    height: 650px;
+    height: 470px !important;
+  }
+  .pr{
+    height: 515px !important;
   }
 }
 table{
