hice la funcion de pasar a la etapa candidate, lo modifico en db tambien

--- a/src/styles/components/table.css
+++ b/src/styles/components/table.css
@@ -171,3 +171,8 @@ table tbody tr td p{
   .table-container:hover::-webkit-scrollbar-thumb::after {
     opacity: 1; /* Hace visible los pseudoelementos */
   }
+
+
+  .check-candidate{
+    padding: 0.3rem;
+  }
